# ereignis

./: README.md  pyproject.toml
.github/workflows/: test.yaml
ereignis/: schema.py  server.py
tests/: test_app.py  tests_app.py
